--- a/Rules
+++ b/Rules
@@ -27,6 +27,12 @@ LANGUAGES.each do |lang|
     layout "default_#{lang}"
   end
 
+  compile "/#{lang}/news" do
+    filter :erb
+    filter :kramdown
+    layout "default_#{lang}"
+  end
+
   compile "/#{lang}/news/*/" do
     filter :kramdown
     layout "default_#{lang}"
@@ -57,6 +63,10 @@ end
 LANGUAGES.each do |lang|
   route "/#{lang}/" do
     "/#{lang}/index.html"
+  end
+
+  route "/#{lang}/news/" do
+    "/#{lang}/news/index.html"
   end
 
   route "/#{lang}/pages/*/" do
