--- a/Rules
+++ b/Rules
@@ -16,14 +16,10 @@
 
 LANGUAGES = Dir["content/*"].map{|str| File.basename(str)}.select{|str| str.chars.count == 2}
 
-compile '/stylesheet/' do
-  # don’t filter or layout
-end
-
 LANGUAGES.each do |lang|
   compile "/#{lang}/" do
     filter :erb
-    filter :kramdown
+    filter :kramdown, :coderay_line_numbers => nil, :coderay_css => :class
     layout "default_#{lang}"
   end
 
@@ -38,23 +34,15 @@ LANGUAGES.each do |lang|
   end
 
   compile "/#{lang}/pages/*/" do
-    filter :kramdown
+    filter :kramdown, :coderay_line_numbers => nil, :coderay_css => :class
     layout "default_#{lang}"
   end
 
   compile "/#{lang}/news/*/" do
-    filter :kramdown
+    filter :kramdown, :coderay_line_numbers => nil, :coderay_css => :class
     layout "blogpost_#{lang}"
   end
 
-end
-
-compile "/assets/*/" do
-  # don’t filter binary assets
-end
-
-route '/stylesheet/' do
-  '/style.css'
 end
 
 route "/*/news/*/" do
@@ -81,6 +69,18 @@ LANGUAGES.each do |lang|
   route "/#{lang}/pages/*/" do
     "/#{lang}/" + item.identifier.split("/")[3] + "/index.html"
   end
+end
+
+compile '/stylesheets/*/' do
+  # don’t filter or layout
+end
+
+compile "/assets/*/" do
+  # don’t filter binary assets
+end
+
+route '/stylesheets/*/' do
+  item.identifier.chop + ".css"
 end
 
 route "/assets/*/" do
