--- a/Rules
+++ b/Rules
@@ -23,11 +23,11 @@ preprocess do
     feed = <<-ATOM
 <?xml version="1.0" encoding="UTF-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
-  <link rel="self" type="application/atom+xml" href="http://www.secretchronicles.de/#{lang}/feed/"/>
-  <link rel="alternate" type="text/html" href="http://www.secretchronicles.de/#{lang}/"/>
+  <link rel="self" type="application/atom+xml" href="https://secretchronicles.org/#{lang}/feed/"/>
+  <link rel="alternate" type="text/html" href="https://secretchronicles.org/#{lang}/"/>
   <title>Secretchronicles #{lang} Feed</title>
   <updated>#{Time.now.utc.iso8601}</updated>
-  <id>secretchronicles.de;#{lang}feed</id>
+  <id>secretchronicles.org;#{lang}feed</id>
     ATOM
 
     news = news_for(lang)
@@ -42,7 +42,7 @@ preprocess do
   <entry>
     <link href="<%= item.path %>"/>
     <title>#{news_item[:title]}</title>
-    <id>secretchronicles.de/#{lang};#{news.count - i}</id>
+    <id>secretchronicles.org/#{lang};#{news.count - i}</id>
     <updated>#{news_item[:date].iso8601}</updated>
     <author><name>#{news_item[:author]}</name></author>
     <summary type="html"><%= CGI.escape_html(item[:summary]) %></summary>
