--- a/Rules
+++ b/Rules
@@ -15,6 +15,8 @@ require "time"
 #   item, use the pattern “/about/*/”; “/about/*” will also select the parent,
 #   because “*” matches zero or more characters.
 
+
+
 LANGUAGES = Dir["content/*"].map{|str| File.basename(str)}.select{|str| str.chars.count == 2}
 
 # Generate the RSS feeds
@@ -66,6 +68,10 @@ LANGUAGES.each do |lang|
     layout "default_#{lang}"
   end
 
+compile '/' do
+    end
+
+
   compile "/#{lang}/news/" do
     filter :erb
     layout "default_#{lang}"
@@ -116,6 +122,10 @@ LANGUAGES.each do |lang|
   route "/#{lang}/feed/" do
     "/#{lang}/feed.atom"
   end
+
+  route "/" do
+    "/index.html"
+end
 
   route "/#{lang}/pages/*/" do
     "/#{lang}/" + item.identifier.split("/")[3] + "/index.html"
